add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,83 @@
 <html>
     <head>
         <title> the zone </title>
+        <style type="text/css">
+            body {
+                background: rgb(235, 195, 247);
+                color: rgb(156, 64, 184);
+                padding: 10px;
+                font-family: arial;
+            }
+            header {
+                font-size: 1.5em;
+                font-weight: bold;
+            }
+            #all-contents {
+                max-width: 800px;
+                margin: auto;
+            }
+
+            /* navigation menu */
+            nav {
+                background: rgb(250, 139, 42);
+                margin: 0 auto;
+                display: flex;
+                padding: 10px;
+            }
+            h1 {
+                display: flex;
+                align-items: center;
+                color: darkorchid;
+                flex: 1;
+            }
+            #nav-ul {
+                list-style-image: none;
+            }
+            .nav-li {
+                display: inline-block;
+                padding: 0 10px;
+            }
+            .nav-a {
+                text-decoration: none;
+                color: #fff;
+            }
+
+            /*main container area beneath menu */
+            main {
+                background: rgb(245, 238, 219);
+                display: flex;
+            }
+            .content {
+                flex: 1;
+                padding: 15px;
+            }
+
+            /* portfolio styles */
+            .content h1 {
+                color: firebrick;
+            }
+
+            #portfolio {
+                list-style-type: none;
+                padding-left: 0;
+            }
+
+            #portfolio li {
+                background: rgb(250, 139, 42);
+                padding: 10px;
+                border-radius: 10px;
+                margin-bottom: 10px;
+            }
+
+            #portfolio li:hover {
+                background: rgb(200, 89, 0)
+            }
+
+            #portfolio a {
+                text-decoration: none;
+                color: #454545;
+            }
+        </style>
     </head>
 
     <body>
