--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -61,7 +61,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+				var positionX = 0
+				var points = 0
+
 
 			
 			/* 
@@ -70,7 +72,8 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				positionX = positionX + 10;
+				moveBoxTo(positionX);
 
 			};
 
@@ -80,9 +83,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
-
+				positionX = 0;
+				points = points + 1;
+				changeBoxText(points);
 			};
 		})();
 	</script>
