--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -61,21 +61,24 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-				var positionX = 0
-				var points = 0
-
-
-			
+				var positionX = 0;
+				var points = 0;
+				var speed = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				positionX = positionX + 10;
+				positionX = positionX + speed;
 				moveBoxTo(positionX);
-
-			};
+				if (positionX > boardWidth) {
+					speed = -speed;
+				} 
+				else if (positionX < 0) {
+					speed = -speed;
+				}
+			}
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -86,6 +89,12 @@
 				positionX = 0;
 				points = points + 1;
 				changeBoxText(points);
+				if (speed > 0) {
+					speed = speed + 3;
+				}
+				else if (speed < 0) {
+					speed = speed - 3;
+				};
 			};
 		})();
 	</script>
